--- a/Figures for McManus et al. (2021) Ecology.ipynb
+++ b/Figures for McManus et al. (2021) Ecology.ipynb
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Create V_array for indexing "
+    "#### Create array for indexing V values"
    ]
   },
   {
